--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -120,7 +120,7 @@ body {
     color: #000000;
     background-color: #bfbfbf;
 }
-.carousel-row .col-12 {
+.carousel-row>.col-12 {
     padding-left: 0px;
     padding-right: 0px;
 
@@ -210,4 +210,111 @@ body {
 #carousel-featured .carousel-control-next {
     transform: translate(-10%,-4%);
 
+}
+#store-features {
+    box-shadow: 0 0 15px #EEF0EA;
+    position: relative;
+    top: -30px;
+    background-image: url(../images/bg_features.png);
+    background-repeat: no-repeat;
+    background-color: #fff;
+    padding-bottom: 35px;
+    padding-top: 25px;
+    background-size: auto 60%;
+    background-position:-10px -20px;
+}
+#store-features .feature img {
+    height: 40px;
+    margin-bottom: 10px;
+}
+#store-features .feature+.feature {
+    border-right: 1px solid #EEF0EA;
+}
+h3.custom-heading {
+    font-size: 24px;
+    margin-bottom: 25px;
+}
+.custom-thumbnail {
+    border: 2px solid #EEF0EA;
+    padding: 8px;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+.custom-thumbnail:hover {
+    border-color: #53ccd7;
+}
+.custom-thumbnail h4 {
+    font-size: 18px;
+    padding-top: 10px;
+}
+.custom-thumbnail .card-body {
+    padding: 9px;
+}
+.custom-thumbnail .price {
+    padding-top: 10px;
+}
+.price{
+    color: #53ccd7;
+}
+.rating {
+    color: #c2c2c2;
+}
+.rating .active {
+    color: #f3af41;
+}
+.custom-thumbnail .overlay {
+    position: absolute;
+    background-color: rgba(83, 204, 215, 0.5);
+    height: 250px;
+    width: calc(100% - 16px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: all .4s ease;
+}
+.overlay:hover {
+    opacity: 1;
+}
+.custom-thumbnail .add-to-cart-btn {
+    background-color: #fff;
+    color: #19becd;
+    font-weight: bold;
+}
+.custom-thumbnail .add-to-cart-btn:hover,
+.custom-thumbnail .add-to-cart-btn:active,
+.custom-thumbnail .add-to-cart-btn:focus,
+.custom-thumbnail .add-to-cart-btn:active:focus,
+.custom-thumbnail .add-to-cart-btn:active:hover {
+    color: #000;
+}
+.custom-thumbnail .sale {
+    padding: 5px 10px;
+    position: absolute;
+    left: 16px;
+    top: 14px;
+    direction: ltr;
+}
+.custom-thumbnail .sale::before {
+    content: '-';
+}
+.carousel-indicators>li {
+    width: 13px;
+    height: 13px;
+    margin: 2px;
+    background-color: #7a7a76;
+    
+}
+.carousel-indicators>li.active{
+    background-color: #565656;
+}
+#carousel-most-sold .carousel-indicators {
+    position: static;
+}
+.custom-thumbnail img {
+    height: 250px;
+    width: 100%;
+    max-width: 250px;
+    margin: 0 auto;
+    display: block;
 }
