--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -462,6 +462,218 @@ h3.custom-heading {
     margin-left: 5px;
     margin-right: 5px;
 }
+
+/*****************************************************************************************************************************************************************************************************************************************
+product page 
+***************
+**************************************************************************************************************/
+
+.custom-breadcrumb {
+    background-color: transparent;
+    padding: 25px 0;
+}
+.custom-breadcrumb a {
+    color: #555555;
+    text-decoration: none;
+}
+.custom-breadcrumb a:hover {
+    color: #f8ad47;
+}
+.custom-breadcrumb li {
+    display: inline-block;
+}
+.custom-breadcrumb>li+li::before{
+    content:">";
+    color: #555555;
+    padding: 0 5px ;}
+.custom-breadcrumb .active{
+    color: #bfbfbf;
+}
+#carousel-product-images .carousel-indicators {
+    position: relative;
+    top: -35px;
+    right: 0;
+}
+#carousel-product-images .carousel-item img {
+    border: 1px solid #ebebeb;
+    width: 100%;
+}
+.block-100 {
+    width: 100%;
+    display: block;
+}
+.product-category {
+    color: #a9a9a9;
+}
+#form-product-selection h2 {
+    font-size: 30px;
+    font-weight: 700;
+    margin: 18px 0 18px;
+}
+.large.price {
+    font-size: 30px;
+    margin-top: 20px;
+}
+.borders-between>div+div{
+    border-top: 1px solid #ebebeb;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.product-option {
+    display: inline-block;
+    height: 23px;
+    width: 23px;
+    border: 1px solid #ebebeb;
+    text-align: center;
+    color: #c2c2c2;
+    margin: 3px 3px 9px 3px;
+}
+.product-option input {
+    display: none;
+}
+.product-option label{
+    font-weight: 700;
+    display: inline-block;
+    width: 100%;
+}
+.product-option.active {
+    color: #f8ad47;
+    border-color: #f8ad47;
+}
+.color-option.active {
+    border-color: #fff;
+    outline: #000 solid 1px;
+}
+.product-quantity select {
+    width: 56px;
+    height: 34px !important;
+    padding: 6px 12px;
+    margin-right: 3px;
+}
+.product-quantity .label {
+    padding-top: 10px;
+}
+.product-quantity {
+    padding-bottom: 20px;
+}
+.custom-btn-with-icon {
+   font-size: 18px;
+   margin-top: 15px;
+   margin-bottom: 10px;
+   padding: 5px 10px 5px 10px;
+
+}
+.heading-with-border-bottom {
+    border-bottom: 2px solid #ebebeb;
+    padding-bottom: 15px;
+}
+.heading-inline{
+    display: inline-block;
+    min-width: 250px;
+}
+.more-description p,
+.more-description ul {
+    margin-bottom: 10px;
+}
+.comments .media {
+    margin: 15px;
+}
+.comments .media img {
+    width: 80px;
+    height: 80px;
+    margin-left: 10px;
+    border:1px solid #dfdfdf;
+}
+.comments .media .media-heading {
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+.suggestions .custom-thumbnail {
+    margin-right: -8px;
+    margin-left: -8px;
+}
+/***************************************************************************
+checkout page*******************************************************************
+*******************/
+.custom-table {
+    width: 100%;
+}
+h1.custom-heading {
+    font-size: 36px;
+    margin: 25px 0;
+}
+.custom-table .custom-media img {
+    width: 80px;
+    height: 80px;
+    border: 1px solid #ebebeb;
+    margin-left: 10px;
+}
+.custom-table .custom-media h4 {
+    font-size: 18px;
+    margin: 12px 0;
+}
+.custom-table .quantity {
+    width: 56px;
+    height: 34px !important;
+    padding: 0px 8px;
+    margin: auto;
+}
+
+.custom-table th, .custom-table td {
+    padding: 15px;
+    border-bottom: 1px solid #ebebeb;
+    border-top: 1px solid #ebebeb;
+    font-size: 110%;
+}
+.custom-table th:first-child, .custom-table td:first-child {
+    width: 50%;
+}
+.custom-table th {
+    color: #c2c2c2;
+    font-weight: normal;
+}
+.custom-btn-danger {
+    color: #ff5a5f;
+    border-color: #ff5a5f;
+    background-color: transparent;
+    border-radius: 3px;
+}
+.custom-btn-danger:hover ,
+.custom-btn-danger:active ,
+.custom-btn-danger:active:focus ,
+.custom-btn-danger:active:hover {
+    color: #c2101e;
+    border-color: #c2101e;
+    background-color: transparent;
+}
+.custom-table .custom-media {
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 15px;
+}
+.custom-table th:first-child {
+    padding-right: 20px;
+}
+.custom-table tfoot td {
+    border-bottom: none;
+    font-size: 150%;
+}
+.custom-table .total-price *  {
+    color: #000;
+}
+.custom-table .total-price .custom-text-muted .custom-text-muted {
+    color: #a9a9a9;
+}
+
+
+
+
+
+
+
+
+
+
 @media (max-width: 1199px){
     .custom-navbar .navbar-nav li a.nav-link {
         padding: 8px;
@@ -569,6 +781,14 @@ h3.custom-heading {
         max-width: 95%;
         width: 100%;
     }
+    /*product page*/ 
+    .product-option {
+        width: 40px;
+        height: 40px;
+        margin: 10px;
+        line-height: 40px;
+        font-size: 20px;
+    }
 } 
 
 @media (max-width: 767px){
@@ -587,7 +807,10 @@ h3.custom-heading {
     #carousel-featured .carousel-item  img {
         height: 250px;
     }
-
+    /*checkout page*/
+    .hide-on-small {
+        display: none;
+    }
     
 } 
 
@@ -606,5 +829,9 @@ h3.custom-heading {
     #footer #brand-logos .img-container img {
         margin: 5px 15px;
     }
-    
+    /*product page*/ 
+    #form-product-selection, .comments {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 } 
