--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -688,9 +688,87 @@ payment page***********************************************************/
 #credit-card-info {
     margin-right: 3%;
 }
-
-
-
+/*********************************************
+*****************************************
+******************************************************************
+*********************************************
+SEARCH PAGE*****
+*************************************************/
+#form-advanced-search {
+    border: 1px solid #ebebeb;
+    padding-bottom: 20px;
+    display: table;
+}
+#form-advanced-search .custom-panel {
+    border: none;
+    padding: 5px;
+}
+.custom-panel .card-header {
+    background-color: transparent;
+    margin-bottom: 15px;
+    padding: 7px 10px 13px;
+}
+.custom-list-group>.list-group-item {
+    border:none;
+    padding: 0 10px 14px 0;
+}
+.custom-list-group>.list-group-item:last-child{
+    padding: 0 10px 0px 0;
+}
+#form-advanced-search label {
+    cursor:pointer;
+    font-weight: bold;
+}
+/*تنسيق مكون البحث حسب السعر*/
+.ui-slider {
+    margin: 25px 0 15px !important;
+    height: 2px !important;
+}
+/*المقبضان*/
+.ui-slider .ui-slider-handle {
+    background-color: #f8ad47 !important;
+    border: none !important;
+    border-radius: 50%;
+    width: 13px !important;
+    height: 13px !important;
+    top: -6px !important;
+}
+/*المجال*/
+.ui-slider .ui-slider-range {
+    border:1px solid #f8ad47 !important;
+    top: -1px !important;
+    
+}
+.custom-pagination li a {
+    border:1px solid #ebebeb;
+    width: 32px;
+    height: 32px;
+    line-height: 32px;
+    margin-right: 3px;
+    margin-left: 3px;
+    color: #c2c2c2;
+    transition: all 0.3s ease;
+    display: inline-block;
+    text-align: center;
+}
+.custom-pagination li.active a {
+    background-color: #f8ad47;
+    color: #fff;
+    border-color: #f8ad47;
+}
+.custom-pagination li a:active,
+.custom-pagination li a:focus,
+.custom-pagination li a:hover {
+    color: #ab7731;
+    border-color: #ab7731;
+}
+.custom-pagination {
+    margin: 25px 0;
+}
+#search-results .custom-thumbnail {
+    margin-right: -8px;
+    margin-left: -8px;
+}
 
 
 
@@ -813,6 +891,12 @@ payment page***********************************************************/
         margin: 10px;
         line-height: 40px;
         font-size: 20px;
+    }
+    /****search page***/
+    .ui-slider .ui-slider-handle{
+        height: 20px!important;
+        width: 20px !important;
+        top: -10px !important;
     }
 } 
 
