--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -769,6 +769,37 @@ SEARCH PAGE*****
     margin-right: -8px;
     margin-left: -8px;
 }
+/***********************************************************************************
+***********************************************************************************
+************************************
+contact page*****************************/
+#map {
+    padding: 0;
+}
+#contact-options h4 {
+    font-size: 18px;
+    padding-bottom: 12px;
+}
+.heading-with-border-bottom {
+    margin-bottom: 20px;
+}
+#contact-info {
+    margin-bottom: 25px;
+}
+#contact-info .fa-lg{
+    color: #f3af41;
+    font-size: 18px;
+    margin: 10px 10px 7px 10px;
+    width: 25px;
+    text-align: center;
+}
+#contact-options textarea {
+   height: 128px !important;
+}
+#contact-options {
+    margin-bottom: 25px;
+}
+
 
 
 
@@ -897,6 +928,10 @@ SEARCH PAGE*****
         height: 20px!important;
         width: 20px !important;
         top: -10px !important;
+    }
+    /********contact-page**/
+    #form-subscription{
+        margin-bottom: 40px;
     }
 } 
 
